# fir

./: .gitignore  CNAME  Dockerfile  Dockerfile.companion  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.server  LICENSE  README.md  build-gs.sh  build.sh  build_quantities.sh  debug.html  gs-sidebar.html  index.html  pixi.toml  specs.html
catalog/: find-duplicates.sh  generate_training.js  package-lock.json  package.json  parse.js  parse.mjs
foxhole/airborne-63/: catalog.json
foxhole/entrenched/: catalog.json
foxhole/infantry-59/: catalog.json
foxhole/infantry-60/: catalog.json
foxhole/infantry-61/: catalog.json
foxhole/inferno/: catalog.json
foxhole/inferno-52/: catalog.json
foxhole/naval/: catalog.json
foxhole/naval-56/: catalog.json
foxhole/naval-57/: catalog.json
gs-sidebar/: jsconfig.json  readme.md
gs-sidebar/fir-sidebar/: fir-sidebar-gs.gs  (+1 more)
includes/: catalog.js  catalog.json  catalog_devbranch.json  class_names.js  class_names.json  debug.js  frontend.mjs  items.js  main.css  main.js  ocr.js  ocr.mjs  screenshot.js  screenshot.mjs  worker.mjs  worker_pool.mjs
native/: Cargo.toml  build_windows.sh  test.sh
native/shared/: Cargo.toml
native/shared/src/: batch_resizer.rs  catalog.rs  classifier.rs  lib.rs  ocr.rs  resizer.rs  slicer.rs  specs.rs  types.rs
slicer/: Cargo.toml  build.sh
spec/: data  screenshots.js
sundial/: .gitignore  build-gs.sh  gs-sidebar.gs  gs-sidebar.html  package-lock.json  package.json
trainer/: Pipfile  generate_quantities.py  generate_quantities.sh  sort_json.py  train.py  train_quantity.py
(+50 files in other folders)
