[package]
name = "foxhole-inventory-shared"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "batch_resizer"
path = "src/batch_resizer.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fis"

[dependencies]
image = "0.25.9"
ocrs = "0.12.1"
regex = "1.12.3"
rten = { version = "0.24.0", features = ["onnx_format"], default-features = false }
rten-imageproc = "0.24.0"
rten-tensor = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
